processed/jira/txt/LU/LU-9831.txt
Key:        LU-9831
Summary:    Truncation of output string in lsnapshot.c::jt_snapshot_create
Link:       https://jira.whamcloud.com/browse/LU-9831
Type:       Bug
Priority:   Minor
Status:     Open
Resolution: Unresolved
Assignee:   WC Triage
Reporter:   Oleg Drokin
Created:    Fri, 4 Aug 2017 15:49:59 +0000
Updated:    Fri, 4 Aug 2017 15:49:59 +0000

--- Description ---
This is highlighted by modern gcc and I guess not so important in the end, but the warnng breaks the compile:

lsnapshot.c: In function Б─≤jt_snapshot_createБ─≥:
lsnapshot.c:1328:31: error: Б─≤snprintfБ─≥ output truncated before the last format character [-Werror=format-truncation=]
  snprintf(new_fsname, 8, "%08x", (__u32)random());
                               ^
lsnapshot.c:1328:2: note: Б─≤snprintfБ─≥ output 9 bytes into a destination of size 8
  snprintf(new_fsname, 8, "%08x", (__u32)random());
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
